--- a/public/css/landing/main.css
+++ b/public/css/landing/main.css
@@ -5613,6 +5613,7 @@ a:active {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
 }
 .banner {
+  height: 640px;
   color: #fff;
   position: relative;
 }
