--- a/public/css/landing/main.css
+++ b/public/css/landing/main.css
@@ -5777,17 +5777,85 @@ a:active {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
 }
 .banner {
-  height: 640px;
+  height: 600px;
   color: #fff;
   position: relative;
 }
+.banner .uk-input-group {
+  position: relative;
+  display: table;
+  border-collapse: separate;
+}
+.banner .uk-input-group .md-input {
+  border: none;
+}
+.banner .uk-input-group .md-input::-webkit-input-placeholder {
+  font-size: 16px;
+}
+.banner .uk-input-group .md-input::-moz-placeholder {
+  font-size: 16px;
+}
+.banner .uk-input-group .md-input:-ms-input-placeholder {
+  font-size: 16px;
+}
+.banner .uk-input-group .uk-input-group-addon {
+  width: 1%;
+  white-space: nowrap;
+  vertical-align: middle;
+  line-height: 1;
+  text-align: center;
+  padding: 4px 16px 0 0;
+  font-size: 22px;
+  min-width: 22px;
+  display: table-cell;
+}
 .banner .md-card {
   margin: 250px auto;
-  width: 40%;
+  width: 50%;
+  background: none;
+  border-radius: 5px;
+  zoom: 1.1;
 }
 .banner .md-card-toolbar {
   height: 48px;
-  color: black;
+  color: #fff;
+  border: none;
+  background-color: rgba(33, 150, 244, 0.73);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding: 0 0 0 16px;
+}
+.banner .md-card-toolbar .md-card-toolbar-heading-text {
+  color: #fff;
+  font: italic 300 18px / 50px "Roboto", sans-serif;
+}
+.banner .md-card-toolbar .md-card-toolbar-actions {
+  padding: 0;
+}
+.banner .md-card-toolbar .uk-tab {
+  margin: 0;
+  border: none;
+}
+.banner .md-card-toolbar .uk-tab li:nth-last-child(2) {
+  border-top-right-radius: 5px;
+}
+.banner .md-card-toolbar .uk-tab li.uk-active {
+  background-color: #004d8b;
+  border: none;
+}
+.banner .md-card-toolbar .uk-tab li a {
+  color: #fff;
+  padding: 15px 12px !important;
+  border: none;
+}
+.banner .md-card-content {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  padding: 0 16px;
+  background: #f2f2f2;
+}
+.banner .md-card-content .uk-switcher {
+  width: 100%;
 }
 .uk-touch .slide_navigation {
   display: block !important;
