--- a/resources/assets/less/landing/_altair_landing_page.less
+++ b/resources/assets/less/landing/_altair_landing_page.less
@@ -235,16 +235,83 @@ a {
 
 // top banner (slideshow)
 .banner {
-    height: 640px;
+    height: 600px;
     color: @white;
     position: relative;
+    .uk-input-group {
+        position: relative;
+        display: table;
+        border-collapse: separate;
+
+        .md-input {
+            border: none;
+            &::-webkit-input-placeholder {font-size: 16px}
+            &::-moz-placeholder {font-size: 16px}
+            &:-ms-input-placeholder {font-size: 16px}
+        }
+
+        .uk-input-group-addon {
+            width: 1%;
+            white-space: nowrap;
+            vertical-align: middle;
+            line-height: 1;
+            text-align: center;
+            padding: 4px 16px 0 0;
+            font-size: 22px;
+            min-width: 22px;
+            display: table-cell;
+        }
+    }
     .md-card {
         margin: 250px auto;
-        width: 40%;
+        width: 50%;
+        background: none;
+        border-radius: 5px;
+        zoom: 1.1;
     }
     .md-card-toolbar {
         height: 48px;
-        color: black;
+        color: @white;
+        border: none;
+        background-color: rgba(33, 150, 244, 0.73);
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        padding: 0 0 0 16px;
+        .md-card-toolbar-heading-text {
+            color: @white;
+            font: italic 300 18px / 50px "Roboto", sans-serif;
+        }
+        .md-card-toolbar-actions {
+            padding: 0;
+        }
+        .uk-tab {
+            margin: 0;
+            border: none;
+            li {
+                &:nth-last-child(2) {
+                    border-top-right-radius: 5px;
+                }
+                &.uk-active {
+                    background-color: #004d8b;
+                    border: none;
+                }
+                a {
+                    color: @white;
+                    padding: 15px 12px !important;
+                    border: none;
+                }
+            }
+        }
+    }
+    .md-card-content {
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        padding: 0 16px;
+        background: rgb(242, 242, 242);
+
+        .uk-switcher {
+            width: 100%;
+        }
     }
 }
 .uk-touch {
