--- a/public/css/landing/main.css
+++ b/public/css/landing/main.css
@@ -422,7 +422,8 @@
   display: inline-block;
   margin: 0;
   text-shadow: none;
-  color: #fff;
+  color: #727272;
+  font-size: 1.4rem;
 }
 .uk-navbar-nav > li > a {
   height: 64px;
@@ -5682,7 +5683,6 @@ a:active {
 }
 #header_main .uk-navbar-nav > li > a {
   color: #727272;
-  text-transform: uppercase;
   font-size: 14px;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
