--- a/resources/assets/less/landing/_uikit_custom.less
+++ b/resources/assets/less/landing/_uikit_custom.less
@@ -402,7 +402,8 @@
         display: inline-block;
         margin: 0;
         text-shadow: none;
-        color: @white;
+        color: @text_secondary_color;
+        font-size: 1.4rem;
     }
     &-nav {
         > li > a {
