--- a/resources/assets/less/landing/main.less
+++ b/resources/assets/less/landing/main.less
@@ -31,3 +31,7 @@
 
 /* theme */
 @import "themes/_default";
+
+@import "../../../../bower_components/selectize/dist/less/selectize.less";
+
+// @import "plugins/_selectize.less";
