--- a/resources/assets/less/landing/_altair_landing_page.less
+++ b/resources/assets/less/landing/_altair_landing_page.less
@@ -263,8 +263,6 @@ a {
         }
     }
     .md-card {
-        margin: 250px auto;
-        width: 35%;
         background: none;
         border-radius: 5px;
         zoom: 1.1;
@@ -287,11 +285,27 @@ a {
     .md-card-content {
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
-        padding: 0 16px;
+        padding: 14px 16px;
         background: rgb(242, 242, 242);
 
         .uk-switcher {
             width: 100%;
+        }
+
+        #keyword {
+            &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+
+            }
+            &::-moz-placeholder { /* Firefox 19+ */
+
+            }
+            &:-ms-input-placeholder { /* IE 10+ */
+
+            }
+            &:-moz-placeholder { /* Firefox 18- */
+
+            }
+
         }
     }
 }
