--- a/resources/assets/less/landing/_altair_landing_page.less
+++ b/resources/assets/less/landing/_altair_landing_page.less
@@ -288,8 +288,18 @@ a {
         padding: 14px 16px;
         background: rgb(242, 242, 242);
 
+        .price-select {
+            .selectize-input:after {
+                display: none;
+            }
+        }
+
         .uk-switcher {
             width: 100%;
+        }
+
+        .uk-grid {
+            margin-left: 0;
         }
 
         #keyword {
