--- a/public/css/landing/main.css
+++ b/public/css/landing/main.css
@@ -5836,8 +5836,14 @@ a:active {
   padding: 14px 16px;
   background: #f2f2f2;
 }
+.banner .md-card-content .price-select .selectize-input:after {
+  display: none;
+}
 .banner .md-card-content .uk-switcher {
   width: 100%;
+}
+.banner .md-card-content .uk-grid {
+  margin-left: 0;
 }
 .banner .md-card-content #keyword::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
